# appdata-tools

./: Makefile.am  NEWS  RELEASE  appdata.its  appdata.rnc  appdata.rng  configure.ac  example.patch  index.html  update.sh
contrib/: appdata-tools.spec.in  create-appdata.py
data/: Makefile.am  appdata-rng-init.el.in  appdata-xml.m4  appdata.rnc  appdata.xsd  broken.appdata.xml  metadata.appdata.xml  schemas.xml  short-para-before-list.appdata.xml  success.appdata.xml  translated.appdata.xml
docs/: Makefile  appdata.rnc  common.css  example-intltool.patch  example.patch  index.html  update.sh  validate.php
po/: POTFILES.in
src/: Makefile.am  appdata-common.c  appdata-common.h  appdata-problem.c  appdata-problem.h  appdata-self-test.c  appdata-validate.c
